--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/ka-sh/DQQABwAACgYJCgwCBA8JBg/issues"
   },
-  "homepage": "https://github.com/ka-sh/DQQABwAACgYJCgwCBA8JBg#readme"
+  "homepage": "https://github.com/ka-sh/DQQABwAACgYJCgwCBA8JBg#readme",
+  "devDependencies": {
+    "eslint-config-aftership": "^2.3.3"
+  }
 }
