--- a/package.json
+++ b/package.json
@@ -17,6 +17,13 @@
   },
   "homepage": "https://github.com/ka-sh/DQQABwAACgYJCgwCBA8JBg#readme",
   "devDependencies": {
-    "eslint-config-aftership": "^2.3.3"
+    "eslint": "^2.11.1",
+    "eslint-config-aftership": "^2.3.3",
+    "eslint-plugin-import": "^1.8.1",
+    "eslint-plugin-jsx-a11y": "^1.3.0",
+    "eslint-plugin-react": "^5.1.1"
+  },
+  "dependencies": {
+    "fivebeans": "^1.4.1"
   }
 }
