--- a/package.json
+++ b/package.json
@@ -18,17 +18,19 @@
   "homepage": "https://github.com/ka-sh/DQQABwAACgYJCgwCBA8JBg#readme",
   "dependencies": {
     "fivebeans": "^1.4.1",
+    "mongoose": "^4.4.20",
     "q": "^1.4.1",
     "request": "^2.72.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
     "chai-as-promised": "^5.3.0",
-    "mocha": "^2.5.3",
-	"eslint": "^2.11.1",
+    "eslint": "^2.11.1",
     "eslint-config-aftership": "^2.3.3",
     "eslint-plugin-import": "^1.8.1",
     "eslint-plugin-jsx-a11y": "^1.3.0",
-    "eslint-plugin-react": "^5.1.1"
+    "eslint-plugin-react": "^5.1.1",
+    "mocha": "^2.5.3",
+    "sinon": "^1.17.4"
   }
 }
