--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-jsx-a11y": "^1.3.0",
     "eslint-plugin-react": "^5.1.1",
     "mocha": "^2.5.3",
+    "proxyquire": "^1.7.9",
     "sinon": "^1.17.4"
   }
 }
