--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "bs_host":"127.0.0.1",
+  "bs_host":"challenge.aftership.net",
   "bs_port":"11300",
   "bs_tube":"ka-sh",
   "db_host":"127.0.0.1",
